# HybMesh2D

./: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOVER.md  README.md  README_EN.md  build.sh  gui_config.json  implementation_plan.md  run  run.sh  run_preprocessor.sh
docs/: implementation_plan.md  pipeline_refactor_plan.md  solver_integration_plan.md  task.md  walkthrough.md
examples/config/: C_coarse_config.json  I_coarse_resampled_config.json
examples/geometries/: geoms.list  naca0012.stl
include/: BoundaryLayer.hpp  Config.hpp  Curve.hpp  GeomUtils.hpp  Mesh.hpp
results/: PG_setting  getPGrid.mac  input.in  mesh_L-shape_dense.bnd  mesh_L-shape_dense.cel  mesh_L-shape_dense.vrt  mesh_UNICONES_dense.bnd  mesh_cartesian.bnd  mesh_cartesian.cel  mesh_cartesian.vrt  mesh_multiple.bc  mesh_multiple.bc.def  mesh_multiple.bnd  tWall_values.dat.test  test.bc  test.grid  vsurface_qty.dat.test  xxprocess_bc_segments_tmpyy0
script/: generate_letters.py
src/: BoundaryLayer.cpp  Mesh.cpp  main.cpp
tools/PreProcessor/: README.md
tools/PreProcessor/config/: comprehensive_example.json  industrial_pro_example.json  multi_element_example.json  test_auto_split.json  test_config.json  test_pro_phase1.json  test_seg_config.json  test_shapes_backend.json  test_triangle_backend.json
tools/PreProcessor/gui/: GUI_IMPROVEMENT_PLAN.md  gui_config.json  main.py  requirements.txt
tools/PreProcessor/gui/app/: controller.py  styles.py  utils.py
tools/PreProcessor/gui/app/commands/: __init__.py  base.py  segment_cmds.py  split_cmds.py  stitch_cmds.py  vertex_cmds.py
tools/PreProcessor/gui/app/controllers/: __init__.py  backend_ctrl.py  curve_ctrl.py  mesh_gen_ctrl.py  open_endpoint_ctrl.py  postprocess_ctrl.py  segment_ctrl.py  session_ctrl.py  solver_ctrl.py  stitch_ctrl.py  stl3d_ctrl.py  transform_ctrl.py
tools/PreProcessor/gui/app/models/: __init__.py  mesh_config.py  project.py  result_data.py  segment.py  session.py  shape_spec.py  solver_config.py  stl3d_config.py  vtk_mesh.py
tools/PreProcessor/gui/app/services/: dll_templates.py  geometry_service.py  index_helpers.py  stl_loader.py
tools/PreProcessor/gui/app/views/: adjusting_stacked_widget.py  bc_widget.py  canvas.py  clean_double_spin_box.py  collapsible.py  cpp_highlighter.py  dll_builder_dialog.py  log_panel.py  main_window.py  mesh_canvas.py  output_dialog.py  polygon_editor.py  result_canvas.py  settings_dialog.py  shape_dialog.py  sidebar.py  stl3d_canvas.py  unclosed_dialog.py  wall_qty_view.py
tools/PreProcessor/gui/app/views/panels/: __init__.py  actions_panel.py  advanced_panel.py  edge_list_panel.py  edge_props_panel.py  file_panel.py  geometry_panel.py  geometry_tree.py  mesh_config_panel.py  mesh_stats_panel.py  result_panel.py  solver_config_panel.py  solver_monitor_panel.py  stl3d_panel.py  transform_panel.py  vertex_panel.py
tools/PreProcessor/gui/app/workers/: backend_run.py  dll_compile_run.py  mesh_gen_run.py  solver_run.py  stl3d_run.py
tools/PreProcessor/include/: Quality.hpp  Spacing.hpp  Spline.hpp
tools/PreProcessor/src/: main.cpp
tools/scripts/: update_o.py  visualize_dat.py
